commit tree c9a155eddabd4f7274863bb61fe3c7a47d4ffbe4

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Second HTML lab</title>
+    </head>
+    <body>
+        <a href="https://flatironschool.com">Flatiron School</a>
+    </body>
+</html>
